--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "stitches2019",
-  "version": "1.0.0",
+  "name": "tailstack",
+  "version": "0.1.0",
   "description": "",
   "main": "main.js",
+  "repository": "https://github.com/virkillz/tailstack",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "init": "npx tailwind init --full && npx tailwind build src/input.css -o public/css/style.css",
+    "refresh": "npx tailwind build src/input.css -o public/css/style.css",
+    "build": "purgecss --css public/css/style.css --content public/*.html -o src && postcss src/style.css > public/css/style.min.css && echo \" Sukses! \" ",
+    "start": "http-server -p 8088"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +19,11 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "tailwindcss": "^0.7.4"
+    "cssnano": "^4.1.10",
+    "http-server": "^0.11.1",
+    "postcss": "^7.0.16",
+    "postcss-cli": "^6.1.2",
+    "purgecss": "^1.3.0",
+    "tailwindcss": "^1.0.1"
   }
 }
