add live editor

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/virkillz/tailstack",
   "scripts": {
     "init": "npx tailwind init --full",
-    "refresh": "npx tailwind build input.css -c ./tailwind.config.js -o ./output-new.css",
+    "refresh": "npx tailwind build input.css -c ./tailwind.config.js -o ./output.css",
     "build": "purgecss --css public/css/style.css --content public/*.html -o src && postcss src/style.css > public/css/style.min.css && echo \" Sukses! \" ",
     "start": "http-server -p 8088"
   },
